# spoils

./: .gitignore  JOB_QUEUE_USAGE.md  JSONB_QUERY_EXAMPLES.md  README.md  sample_product_response.json
backend/: .env.example  Cargo.toml  TESTING.md
backend/migrations/2025-11-12-185317-0000_create_products/: up.sql
backend/migrations/2025-11-13-152555-0000_create_ingredients/: up.sql
backend/migrations/2025-11-13-152819-0000_create_fang_tasks/: down.sql  up.sql
backend/migrations/2025-11-13-153144-0000_add_ingredients_fields/: down.sql  up.sql
backend/migrations/2025-11-13-160000-0000_create_products_non_food/: down.sql  up.sql
backend/src/: jobs.rs  lib.rs  main.rs  models.rs  schema.rs  workers.rs
backend/tests/: health_tests.rs
mobile/: .env.example  App.tsx  package-lock.json  package.json
mobile/api/: spoils.ts
mobile/screens/: ScanScreen.tsx
