[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
actix-cors = "0.7"
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "serde_json", "uuid"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
fang = { version = "0.11.0-rc1", features = ["asynk-postgres"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
typetag = "0.2"
