[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
actix-cors = "0.7"
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "serde_json", "uuid", "64-column-tables"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
fang = { version = "0.10", features = ["asynk", "derive-error"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
typetag = "0.2"
urlencoding = "2.1"

[dev-dependencies]
actix-rt = "2.10"
mockall = "0.13"
